<resources>
    <string name="app_name">SavingLotto</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="mode_checklotto1">ดูผลรางวัล</string>
    <string name="mode_checklotto2">ตรวจล็อตเตอรี่</string>

    <string name="mode_1">โหมดจำลองการซื้อล็อตเตอรี่</string>
    <string name="mode_2">โหมดซื้อล็อตเตอรี่จริง</string>
    <string name="mode_static1">สถิติโหมดจำลองการซื้อ</string>
    <string name="mode_static2">สถิติโหมดซื้อจริง</string>
    <string name="mode_calc">คำนวณ</string>

    <string name="without_game">ยังไม่ได้เลือกเลขที่ต้องการจะเสี่ยง</string>
    <string name="game_start">เลือกเลขที่ต้องการจะเสี่ยง</string>
    <string name="select">เลือก</string>

    <string name="error_message">กรุณากรอกเลขที่ต้องการจะตรวจ</string>
    <string name="error_message_lenght_lottery">กรุณากรอกล็อตเตอรี่ที่ต้องการให้ครบ 6 หลัก (ตัวอย่าง.:911234)</string>

    <string name="win_lotto">ถูกรางวัล</string>
    <string name="lose_lotto">ไม่ถูกรางวัล</string>
    <string name="wait_lotto">กำลังรอผล</string>
    <string name="no_history">No History</string>
    <string name="deleted">ลบรายการแล้ว</string>

    <string name="input_amount">กรอกจำนวนที่ต้องการซื้อ</string>
    <string name="input_lottery_number">กรอกเลขที่ต้องการ (ตัวอย่าง.:911234)</string>
    <string name="save">บันทึก</string>
    <string name="input_every_fields">กรุณากรอกข้อมูลให้ครบ</string>

    <string name="price_lottery">ราคา/ใบ</string>
    <string name="selected_date">งวดวันที่</string>
    <string name="status">สถานะ</string>
    <string name="amount">จำนวน : </string>
    <string name="paid">จำนวนเงิน : </string>

    <string name="save_complete">บันทึกข้อมูลเรียบร้อย</string>




    <string-array name="lotteries">
        <item>งวดวันที่ 30 ธันวาคม 2560</item>
        <item>งวดวันที่ 16 ธันวาคม 2560</item>
        <item>งวดวันที่ 1 ธันวาคม 2560</item>
        <!--<item>lot2 16/9/2017</item>-->
        <!--<item>lot1 1/9/2017</item>-->
    </string-array>

</resources>
