<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.test.projectv4.MenuActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btnModeSimulation"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:text="@string/mode_1"
            android:background="@color/colorButton"
            android:layout_marginBottom="10dp"
            />

        <Button
            android:id="@+id/btnModePurchase"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:text="@string/mode_2"
            android:background="@color/colorButton"
            android:layout_marginBottom="10dp"
            />

        <Button
            android:id="@+id/btnSeenPrize"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:text="@string/mode_checklotto1"
            android:background="@color/colorButton"
            />

    </LinearLayout>




</LinearLayout>
